# ESP-Kerfur

./: .deny.toml  .gitignore  .gitmodules  .justfile  .taplo.toml  .typos.toml  Cargo.toml  README.md
.cargo/: config.toml
crates/kerfur/: Cargo.toml
crates/kerfur-bitbang/: Cargo.toml
crates/kerfur-bitbang/src/: lib.rs
crates/kerfur-display/: Cargo.toml
crates/kerfur-display/src/: atomic.rs  expression.rs  lib.rs  style.rs
crates/kerfur-display/src/element/: eye.rs  mod.rs  mouth.rs  whisker.rs
crates/kerfur-display/src/primitive/: arc.rs  mod.rs  sector.rs  swirl.rs
crates/kerfur-emote/: Cargo.toml
crates/kerfur-emote/src/: lib.rs
crates/kerfur-es7210/: Cargo.toml
crates/kerfur-es7210/src/: lib.rs
crates/kerfur-es8311/: Cargo.toml
crates/kerfur-es8311/src/: lib.rs
crates/kerfur-gc9503/: Cargo.toml
crates/kerfur-gc9503/src/: color.rs  graphics.rs  lib.rs
crates/kerfur-gt911/: Cargo.toml
crates/kerfur-gt911/src/: lib.rs
crates/kerfur-simulator/: Cargo.toml
crates/kerfur-simulator/src/: main.rs
crates/kerfur-tca9554/: Cargo.toml
crates/kerfur-tca9554/src/: action.rs  lib.rs  pin.rs
crates/kerfur/src/: initialize.rs  main.rs  signal.rs  utility.rs
crates/kerfur/src/app/: audio.rs  display.rs  display_touch.rs  mod.rs  touch.rs
crates/kerfur/src/pro/: audio.rs  mod.rs
src/: clock.rs  display.rs  handler.rs  init.rs  main.rs  wifi.rs
src/display/: audio.rs  emote.rs  mod.rs  touch.rs
src/network/: clock.rs  mod.rs  wifi.rs
