[package]
name = "kerfur-bitbang"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
