[package]
name = "kerfur-display"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
embedded-graphics = { workspace = true }
libm = { workspace = true, optional = true }
