[package]
name = "kerfur-es8311"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
defmt = { workspace = true }
embedded-hal-async = { workspace = true }
