[package]
name = "kerfur-simulator"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
embedded-graphics = { workspace = true }
embedded-graphics-simulator = { workspace = true }
kerfur-display = { workspace = true, features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { workspace = true, features = ["use-vcpkg", "static-link"] }
