[package]
name = "kerfur"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
# Workspace
kerfur-bitbang = { workspace = true }
kerfur-display = { workspace = true, features = ["libm"] }

# Driver Workspace
es7210-driver = { workspace = true, features = ["defmt"] }
es8311-driver = { workspace = true, features = ["defmt"] }
gc9503-driver = { workspace = true, features = ["defmt", "embedded-graphics"] }
gt911-driver = { workspace = true, features = ["defmt"] }
tca9554-driver = { workspace = true, features = ["defmt", "embassy"] }

# Embassy/Embedded
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }
# Espressif
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-hal = { workspace = true }
esp-println = { workspace = true }
esp-radio = { workspace = true }
esp-rtos = { workspace = true }

# Other
defmt = { workspace = true }
static_cell = { workspace = true }
