[package]
name = "kerfur"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
# Workspace
kerfur-display = { workspace = true, features = ["libm"] }

# Driver Workspace
ef-es7210 = { workspace = true }
ef-es8311 = { workspace = true }
ef-gt911 = { workspace = true }
ef-st7701s = { workspace = true }

# Embassy/Embedded
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }
# Espressif
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-hal = { workspace = true }
esp-println = { workspace = true }
esp-radio = { workspace = true }
esp-rtos = { workspace = true }

# Other
defmt = { workspace = true }
embedded-graphics = { workspace = true }
static_cell = { workspace = true }
